# magpie

./: AGENTS.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md  development.md  historian.md  storage.md
magpie/: a2a.py  app.py  cli.py  config.py  doctor.py  errors.py  models.py  news_feeds.json  routes.py  service.py  storage.py
magpie/prompts/: classify_anime_request.txt
magpie/providers/: anilist.py  base.py  fake.py  news_rss.py  openai_compatible.py
tests/: test_cli.py  test_config.py  test_doctor.py  test_provider_failures.py  test_providers.py  test_resolver.py  test_service.py  test_storage.py
