[project]
name = "magpie"
dynamic = ["version"]
description = "Bounded web-research worker with A2A and CLI entrypoints."
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk[fastapi]>=1.0.0",
  "crawl4ai>=0.7.5",
  "feedparser>=6.0.11",
  "httpx>=0.28.1",
  "uvicorn>=0.49.0",
]

[project.scripts]
magpie = "magpie.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "jsonschema>=4.20,<5",
  "pytest>=8.0",
  "mypy>=1.0",
  "ruff>=0.6",
  "types-protobuf",
]

[tool.hatch.build.targets.wheel]
packages = ["magpie"]

[tool.hatch.build.targets.wheel.force-include]
"magpie/news_feeds.json" = "magpie/news_feeds.json"
"magpie/config.example.json" = "magpie/config.example.json"

# Version is derived from git tags via hatch-vcs (setuptools-scm). To cut a
# release, tag the commit (`git tag vX.Y.Z && git push --tags`) — no version
# bump in this file. CI pins SETUPTOOLS_SCM_PRETEND_VERSION=0.0.0 so that
# `uv sync --locked` sees a stable version matching uv.lock regardless of
# git state; release builds (`uv build` at tag time) use the real version.
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Baseline rules: pyflakes (F), pycodestyle errors (E) and warnings (W).
# E501 (line-too-long) is ignored because the codebase is not formatted to a
# fixed line length; enabling it would produce a large, unrelated diff. More
# rule groups (I, UP, B, etc.) can be added incrementally once the codebase is
# formatted.
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true

# Third-party packages that ship without inline type stubs.
[[tool.mypy.overrides]]
module = ["crawl4ai.*", "google.protobuf.*", "uvicorn", "uvicorn.*", "feedparser", "feedparser.*"]
ignore_missing_imports = true
